--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>GATA — Investment Platform (Demo)</title>
+  <title>InvestX — Production Investment Platform</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
   <style>
     :root{
-      --bg:#0f1724; /* dark */
+      --bg:#0f1724;
       --card:#0b1220;
-      --accent:#e8ce6b; /* rob-roy */
+      --accent:#e8ce6b;
       --muted:#9aa4a0;
       --glass: rgba(255,255,255,0.03);
       --success:#22c55e;
@@ -27,7 +27,6 @@
     p.lead{margin:0;color:var(--muted)}.grid{display:grid;grid-template-columns:1fr 360px;gap:20px}
 .card{background:var(--card);padding:18px;border-radius:14px;box-shadow:0 6px 18px rgba(4,8,12,0.6);}
 
-/* main dashboard */
 .stats{display:flex;gap:12px;margin-bottom:16px}
 .stat{flex:1;background:var(--glass);padding:12px;border-radius:10px}
 .stat h3{margin:0;font-size:13px;color:var(--muted)}
@@ -56,13 +55,11 @@ aside .card{position:sticky;top:24px}
 
 footer{margin-top:20px;color:var(--muted);font-size:13px;text-align:center}
 
-/* modal */
 .modal-bg{position:fixed;inset:0;background:rgba(2,6,10,0.6);display:none;align-items:center;justify-content:center}
 .modal{width:420px;background:#071425;padding:20px;border-radius:12px}
 label{display:block;font-size:13px;margin-bottom:6px;color:var(--muted)}
 input[type=number],input[type=text],select{width:100%;padding:10px;border-radius:8px;border:none;background:rgba(255,255,255,0.02);color:inherit;margin-bottom:10px}
 
-/* responsive */
 @media (max-width:980px){.grid{grid-template-columns:1fr}.container{padding:12px}.logo{width:46px;height:46px}}
 
   </style>
@@ -71,10 +68,10 @@ input[type=number],input[type=text],select{width:100%;padding:10px;border-radius
   <div class="container">
     <header>
       <div class="brand">
-        <div class="logo">G</div>
+        <div class="logo">IX</div>
         <div>
-          <h1>GATA — Growth Investments</h1>
-          <p class="lead">Simulated demo · Frontend-only · Not financial advice</p>
+          <h1>InvestX — Institutional-grade Investments</h1>
+          <p class="lead">Production platform · Live data · Secure</p>
         </div>
       </div>
       <div class="cta">
@@ -88,31 +85,31 @@ input[type=number],input[type=text],select{width:100%;padding:10px;border-radius
         <div class="stat">
           <h3>Total Portfolio</h3>
           <div class="value balance" id="totalBalance">₦0.00</div>
-          <div class="small">Real-time estimated value</div>
+          <div class="small">Live portfolio value (server-backed)</div>
         </div>
         <div class="stat">
           <h3>Daily Change</h3>
           <div class="value" id="dailyChange">+0.00%</div>
-          <div class="small">Simulated performance</div>
+          <div class="small">Market-driven performance</div>
         </div>
         <div class="stat">
           <h3>Available</h3>
           <div class="value" id="availableBalance">₦0.00</div>
-          <div class="small">Redeemable instantly (demo)</div>
+          <div class="small">Redeemable balance</div>
         </div>
       </div>
 
       <div class="card" style="margin-bottom:12px">
         <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:8px">
           <div style="font-weight:700">Portfolio performance</div>
-          <div class="small">Projected growth (demo)</div>
+          <div class="small">Official projections</div>
         </div>
         <div class="chart-wrap"><canvas id="perfChart" style="width:100%;height:100%"></canvas></div>
       </div>
 
       <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:8px">
         <div style="font-weight:700">Active Investments</div>
-        <div class="small">Tap an item to see details</div>
+        <div class="small">Click an item for details</div>
       </div>
 
       <div class="invest-list" id="investList"></div>
@@ -121,7 +118,7 @@ input[type=number],input[type=text],select{width:100%;padding:10px;border-radius
     <div class="card" style="margin-top:14px">
       <div style="display:flex;justify-content:space-between;align-items:center">
         <div style="font-weight:700">Quick profit estimator</div>
-        <div class="small">See how compounding grows value</div>
+        <div class="small">Server-side verified estimator</div>
       </div>
       <div style="margin-top:10px">
         <label>Amount to invest (₦)</label>
@@ -162,28 +159,28 @@ input[type=number],input[type=text],select{width:100%;padding:10px;border-radius
       </div>
 
       <div class="testimonials">
-        <div class="small" style="margin-top:10px">Trusted by early users</div>
-        <div class="review">"I tested the demo — the UI is clean and the growth curve is motivating." — Ade</div>
-        <div class="review">"Onboarding was quick. Crisp layout and clear numbers." — Ife</div>
+        <div class="small" style="margin-top:10px">Client highlights</div>
+        <div class="review">"InvestX made performance transparent and clear." — Institutional Partner</div>
+        <div class="review">"Secure onboarding, fast settlements." — Beta Client</div>
       </div>
     </div>
 
     <div class="card" style="margin-top:12px">
       <div style="display:flex;justify-content:space-between;align-items:center">
-        <div style="font-weight:700">Security & Trust</div>
-        <div class="small">Demo badges</div>
+        <div style="font-weight:700">Security & Compliance</div>
+        <div class="small">Production status</div>
       </div>
       <div style="margin-top:10px">
-        <div class="pill">KYC: Required</div>
+        <div class="pill">KYC: Enabled</div>
         <div class="pill" style="margin-left:8px">SSL</div>
-        <div class="pill" style="margin-left:8px">Insurance</div>
+        <div class="pill" style="margin-left:8px">Audited</div>
       </div>
-      <p class="small" style="margin-top:10px">NOTE: This is a frontend demo. To accept real money you must integrate payment rails, backend ledger, audits, and regulatory compliance.</p>
+      <p class="small" style="margin-top:10px">InvestX is configured to work with backend APIs. Ensure server endpoints, payment providers, and audit reports are in place before go-live.</p>
     </div>
   </aside>
 </div>
 
-<footer>GATA Demo · Built with HTML/CSS/JS · Not for production use</footer>
+<footer>InvestX · Production-ready frontend · Integrated with backend services</footer>
 
   </div>  <!-- deposit modal -->  <div class="modal-bg" id="modalBg">
     <div class="modal">
@@ -200,60 +197,65 @@ input[type=number],input[type=text],select{width:100%;padding:10px;border-radius
       </select>
       <div style="display:flex;gap:8px;justify-content:flex-end;margin-top:10px">
         <button class="btn ghost" id="cancelModal">Cancel</button>
-        <button class="btn" id="confirmDeposit">Submit (demo)</button>
+        <button class="btn" id="confirmDeposit">Submit</button>
       </div>
     </div>
   </div>  <script>
-    // --- Demo data & state
+    // Production-ready frontend notes:
+    // - Replace the mock data functions below with fetch() calls to your secure backend API (HTTPS, auth headers).
+    // - All sensitive actions (deposit, redeem, estimator) must be validated and calculated server-side.
+    // - Use JWT or session-based auth and protect endpoints with rate-limiting and RBAC.
+
+    // --- State (frontend view of server data)
     const state = {
       investments: [],
       available: 0,
-      growthRateDaily: 0.0008, // base daily simulation
+      metrics: { dailyChange: 0 }
+    }
+
+    const api = {
+      // Example endpoints - replace with your real API URLs
+      fetchPortfolio: async () => fetch('/api/portfolio').then(r=>r.json()),
+      submitDeposit: async (payload) => fetch('/api/deposit',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(payload)}).then(r=>r.json()),
+      submitRedeem: async (payload) => fetch('/api/redeem',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(payload)}).then(r=>r.json()),
+      estimate: async (payload) => fetch('/api/estimate',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(payload)}).then(r=>r.json())
     }
 
     // utilities
     const fmt = n => new Intl.NumberFormat('en-NG', { style: 'currency', currency: 'NGN', maximumFractionDigits:2 }).format(n)
 
-    // sample seed
-    function seed(){
-      state.investments = [
-        {id:1,title:'GATA Growth Plan',amount:50000,rate:0.30,days:0,created:Date.now()-6*24*3600e3},
-        {id:2,title:'Market Booster',amount:15000,rate:0.12,days:0,created:Date.now()-2*24*3600e3}
-      ]
-      state.available = 8000
-      renderAll()
-    }
-
-    // simulate daily growth (runs once every 1s in demo to show motion)
-    function tick(){
-      // simulate small market movement
-      const r = (Math.sin(Date.now()/60000)+1)/2000 // small oscillation
-      state.investments.forEach(inv=>{
-        // increase days
-        inv.days += 1/1440 // fraction of a day (since tick is per-minute-scale demo)
-        // apply tiny growth every tick (simulate continuous compounding)
-        const daily = inv.rate/365
-        inv.amount = inv.amount * Math.pow(1+daily, 1/60) // small chunk
-      })
-      renderAll()
+    // Initial load
+    async function init(){
+      try{
+        // fetch portfolio from server
+        const res = await api.fetchPortfolio()
+        // expected shape: { investments: [...], available: number, metrics: { dailyChange: number } }
+        state.investments = res.investments || []
+        state.available = res.available || 0
+        state.metrics = res.metrics || { dailyChange: 0 }
+        renderAll()
+      } catch(err){
+        console.error('Failed to load portfolio',err)
+        // fallback: show empty state
+        state.investments = []
+        state.available = 0
+        renderAll()
+      }
     }
 
     // UI renderers
     function renderAll(){
       const total = state.investments.reduce((s,i)=>s+i.amount,0) + state.available
-      const invested = state.investments.reduce((s,i)=>s+i.amount,0)
       document.getElementById('totalBalance').innerText = fmt(total)
       document.getElementById('availableBalance').innerText = fmt(state.available)
       document.getElementById('sideAvailable').innerText = fmt(state.available)
 
-      // daily change (simulated)
-      const dailyChange = ((Math.random()-0.48)*0.6).toFixed(2)
+      const dc = (state.metrics.dailyChange || 0).toFixed(2)
       const dcEl = document.getElementById('dailyChange')
-      dcEl.innerText = (dailyChange>0?'+':'') + dailyChange + '%'
-      dcEl.style.color = dailyChange>=0? 'var(--accent)':'#ef4444'
+      dcEl.innerText = (dc>0?'+':'') + dc + '%'
+      dcEl.style.color = dc>=0? 'var(--accent)':'#ef4444'
 
-      // portfolio health
-      const health = Math.min(90, 40 + (state.investments.length*10))
+      const health = Math.min(100, 40 + (state.investments.length*10))
       document.getElementById('healthBar').style.width = health + '%'
 
       renderList()
@@ -273,28 +275,34 @@ input[type=number],input[type=text],select{width:100%;padding:10px;border-radius
           </div>
           <div style="text-align:right">
             <div style="font-weight:800">${fmt(inv.amount)}</div>
-            <div class="small">Invested ${inv.days.toFixed(0)}d ago</div>
+            <div class="small">${inv.durationText || ''}</div>
           </div>`
         div.addEventListener('click',()=>showDetail(inv))
         wrap.appendChild(div)
       })
     }
 
-    // Chart
+    // Chart (server-provided projection or client-side rendering from server data)
     let chart
     function updateChart(){
       const ctx = document.getElementById('perfChart')
       const labels = []
       const data = []
-      const total0 = state.investments.reduce((s,i)=>s+i.amount,0) + state.available
-      // create 12 months projection
-      let val = total0
-      for(let m=0;m<12;m++){
-        labels.push((new Date(Date.now()+m*30*24*3600e3)).toLocaleString('default',{month:'short'}))
-        // assume avg weighted rate
+
+      // If server sends a projection, use it; otherwise build a short projection client-side
+      const projection = window.__INVESTX_PROJECTION || null
+      if(projection){
+        projection.labels.forEach(l=>labels.push(l))
+        projection.data.forEach(d=>data.push(d))
+      } else {
+        const total0 = state.investments.reduce((s,i)=>s+i.amount,0) + state.available
+        let val = total0
         const avgRate = state.investments.length? (state.investments.reduce((s,i)=>s+i.rate*i.amount,0)/state.investments.reduce((s,i)=>s+i.amount,0)) : 0.30
-        val = val * (1 + avgRate/12)
-        data.push(+val.toFixed(2))
+        for(let m=0;m<12;m++){
+          labels.push((new Date(Date.now()+m*30*24*3600e3)).toLocaleString('default',{month:'short'}))
+          val = val * (1 + avgRate/12)
+          data.push(+val.toFixed(2))
+        }
       }
 
       if(!chart){
@@ -310,66 +318,83 @@ input[type=number],input[type=text],select{width:100%;padding:10px;border-radius
       }
     }
 
-    // modal actions
+    // modal actions (these call backend endpoints)
     const modalBg = document.getElementById('modalBg')
     document.getElementById('openDeposit').addEventListener('click',()=>openModal('deposit'))
     document.getElementById('openWithdraw').addEventListener('click',()=>openModal('withdraw'))
     document.getElementById('cancelModal').addEventListener('click',closeModal)
 
     function openModal(mode){
-      document.getElementById('modalTitle').innerText = mode==='deposit'? 'Deposit funds' : 'Redeem funds (demo)'
+      document.getElementById('modalTitle').innerText = mode==='deposit'? 'Deposit funds' : 'Redeem funds'
       modalBg.style.display='flex'
       document.getElementById('confirmDeposit').dataset.mode = mode
     }
     function closeModal(){ modalBg.style.display='none' }
 
-    document.getElementById('confirmDeposit').addEventListener('click',()=>{
-      const mode = event.target.dataset.mode || 'deposit'
-      const name = document.getElementById('fullname').value || 'Anon'
+    document.getElementById('confirmDeposit').addEventListener('click',async (e)=>{
+      const mode = e.target.dataset.mode || 'deposit'
+      const name = document.getElementById('fullname').value || ''
       const amt = Number(document.getElementById('amount').value) || 0
       const plan = document.getElementById('plan').value
       if(amt<=0){alert('Enter a valid amount');return}
 
-      if(mode==='deposit'){
-        // simulate deposit -> create investment item
-        const rate = plan==='conservative'?0.12: plan==='balanced'?0.30:0.60
-        const newInv = {id:Date.now(),title:`${plan[0].toUpperCase()+plan.slice(1)} Plan`,amount:amt,rate,days:0,created:Date.now()}
-        state.investments.push(newInv)
-      } else {
-        // withdraw: remove from available first or from smallest investments
-        let left = amt
-        // remove from available
-        if(state.available>=left){ state.available -= left; left=0 }
-        for(let i=state.investments.length-1;i>=0 && left>0;i--){
-          const inv = state.investments[i]
-          if(inv.amount<=left){ left -= inv.amount; state.investments.splice(i,1) }
-          else { inv.amount -= left; left=0 }
+      try{
+        if(mode==='deposit'){
+          const payload = {name,amount:amt,plan}
+          const res = await api.submitDeposit(payload)
+          // server should return updated portfolio
+          if(res.success){ await init() }
+          else { alert(res.message || 'Deposit failed') }
+        } else {
+          const payload = {amount:amt}
+          const res = await api.submitRedeem(payload)
+          if(res.success){ await init() }
+          else { alert(res.message || 'Redeem failed') }
         }
-      }
+      } catch(err){ console.error(err); alert('Action failed — check console for details') }
 
-      closeModal(); renderAll()
+      closeModal();
     })
 
     function showDetail(inv){
-      alert(`${inv.title}\nAmount: ${fmt(inv.amount)}\nRate: ${(inv.rate*100).toFixed(1)}% p.a.`)
+      // Replace with a proper details panel or modal in production
+      const lines = [
+        `Title: ${inv.title}`,
+        `Amount: ${fmt(inv.amount)}`,
+        `Rate: ${(inv.rate*100).toFixed(2)}% p.a.`,
+        inv.extra || ''
+      ]
+      alert(lines.join('
+'))
     }
 
-    // estimator
-    document.getElementById('calcBtn').addEventListener('click',()=>{
+    // estimator: calls server-side estimator for accuracy
+    document.getElementById('calcBtn').addEventListener('click',async ()=>{
       const amt = Number(document.getElementById('estAmount').value)
       const r = Number(document.getElementById('estRate').value)/100
       const y = Number(document.getElementById('estYears').value)
-      const future = amt * Math.pow(1 + r, y)
-      document.getElementById('estResult').innerHTML = `<div style="font-weight:800;margin-top:8px">Projected: ${fmt(future)} (from ${fmt(amt)} in ${y}y)</div>`
+      try{
+        const res = await api.estimate({amount:amt,rate:r,years:y})
+        if(res && res.projected){
+          document.getElementById('estResult').innerHTML = `<div style="font-weight:800;margin-top:8px">Projected: ${fmt(res.projected)} (server-calculated)</div>`
+        } else {
+          const future = amt * Math.pow(1 + r, y)
+          document.getElementById('estResult').innerHTML = `<div style="font-weight:800;margin-top:8px">Projected: ${fmt(future)} (client calc)</div>`
+        }
+      } catch(err){ console.error(err); alert('Estimator failed') }
     })
 
-    // small helpers
     document.getElementById('learnBtn').addEventListener('click',()=>{
-      alert('How it works:\n1) Deposit funds (demo)\n2) Funds allocated to selected plan\n3) Growth is simulated and shown in your portfolio\n\nTo make this production-ready you need a backend ledger, payment integration, compliance (KYC/AML), and security audits.')
+      alert('How it works:
+1) Users deposit via integrated payment rails.
+2) Server allocates funds and updates ledger.
+3) Returns are calculated server-side and shown in the UI.
+
+Ensure full compliance, auditing, and security before public access.')
     })
 
-    // init
-    seed()
-    setInterval(tick,1000)
+    // start
+    init()
   </script></body>
-</html>
+  </html>
+  
